# simple-rag-pipeline

./: .gitignore  CLAUDE.md  config.yml  create_parser.py  create_parser_explanation.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/tasks/: analyze_overall_architecture.md  source-grounding-enhancement.md
docs/: README.md  architecture_overview.md
src/: rag_pipeline.py
src/impl/: datastore.py  evaluator.py  indexer.py  response_generator.py  retriever.py
src/interface/: base_datastore.py  base_response_generator.py  base_retriever.py
src/util/: invoke_ai.py
